# OllaBot

./: README.md  app.py  pyproject.toml
api/: server.py
api/configs/: config.yaml  table_config.yaml
api/models/: classes.py
api/services/: database_llm.py  log_analysis_llm.py
tests/assets/: queries.txt
tests/assets/error_logs/: error_log_1.txt  error_log_2.txt
utils/: logging_config.py
